# learning_rust

./: .gitignore  Cargo.toml  README.md  config.toml  resources.md
.cargo/: config.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: rust.yml
course/part00/: README.md
course/part00/hello_world/: README.md
course/part00/hello_world/src/: main.rs
course/part00/myexamples/: Cargo.toml  Errors.java
course/part00/myexamples/go/errors/: errors.go
course/part00/myexamples/go/option/: option.go
course/part00/myexamples/go/threading/: threading.go
course/part00/myexamples/src/: errors.rs  hashmap.rs  lifetimes.rs  option.rs  result.rs  sum_of_even.rs  threading.rs
course/part01/: README.md
course/part02/: README.md
course/part02/floodit/: Cargo.toml
course/part02/floodit/src/: main.rs
course/part03/: README.md
course/part03/bst/: Cargo.toml
course/part04/: README.md
course/part04/aoc/: Cargo.toml
course/part04/aoc/benches/: benchmark.rs
course/part04/aoc/src/: fast.rs  lib.rs  main.rs  slow.rs
course/part05/async1/: Cargo.toml
course/part05/async1/src/: async1.rs
course/part05/async2/: Cargo.toml
course/part05/async2/src/: async2.rs
course/part05/async3/: Cargo.toml
course/part05/async3/src/: async3.rs
course/part05/async4/: Cargo.toml
course/part05/async4/src/: async4.rs
course/part05/async5/: Cargo.toml
course/part05/async5/src/: async5.rs
course/part05/async6/: Cargo.toml
course/part05/async6/src/: async6.rs
course/part05/async7/: Cargo.toml
course/part05/async7/src/: async7.rs
course/part06/channels/: Cargo.toml
course/part06/channels/src/: deck_of_cards.rs  deckofcards.rs  lib.rs  main.rs
course/part06/grpc/: Cargo.toml  build.rs  example.proto
course/part06/grpc/src/: client.rs  lib.rs  server.rs
course/part07/parsing/: Cargo.toml
course/part07/parsing/src/: main.rs
course/part07/tracing_showcase/: Cargo.toml  Dockerfile  build.rs  cards.proto  docker-compose.yml
course/part07/tracing_showcase/.cargo/: config.toml
course/part07/tracing_showcase/src/: deck_of_cards.rs  deck_of_cards_api_state.rs  endpoints.rs  fake_deck_of_cards_api_state.rs  grpc.rs  grpc_server_state.rs  layers.rs  lib.rs  middleware.rs  model.rs  mongo.rs  service.rs  tracing_setup.rs
course/part07/tracing_showcase/src/layers/: jaeger_context_propagation.rs  mod.rs  otlp_context_propagation.rs  request_counter.rs
course/part08/testing/: Cargo.toml
course/part08/testing/src/: config.rs  deck_of_cards.rs  lib.rs  main.rs  model.rs  mongo.rs  state.rs
course/part08/testing/tests/: integration_tests.rs
course/part08/testing/tests/common/: mod.rs
course/part08/testing_cleanup/: Cargo.toml
course/part08/testing_cleanup/src/: lib.rs
course/part09/newtype_pattern/: Cargo.toml
course/part09/newtype_pattern/benches/: bench.rs
course/part09/newtype_pattern/src/: main.rs
course/part09/rabbit_stuff/: Cargo.toml
course/part09/rabbit_stuff/src/: impls.rs  lib.rs  rabbit.rs
course/part10/axum_stuff/: Cargo.toml
course/part10/axum_stuff/src/: lib.rs  routers.rs  tracing_config.rs  tracing_init.rs
course/part10/axum_stuff/src/tower_stuff/: backoff_layer.rs  connection_limit_layer.rs  every_other_layer.rs  mod.rs  new_conn_span_layer.rs  new_conn_trace_layer.rs  panic_capture_layer.rs
course/part11/sqlx_stuff/: Cargo.toml  _.env
course/part11/sqlx_stuff/.sqlx/: query-5322201d23213d0fffb03c11be918a0a8b811fbf76313dcd241a0505d7ea1309.json  query-735f0f87cdd9477864d63363f7e9c8213388328fc7dc0e63b0b2b5669ef09144.json  query-e8bae3fe17fec7c36d9cacf3dc8dd8ff400cb1b56b2b7c4608e92f6c383e6cd0.json
course/part11/sqlx_stuff/migrations/: 20230829123635_create_tables.down.sql  20230829123635_create_tables.up.sql  20230829125920_add_optional_field_to_table.down.sql  20230829125920_add_optional_field_to_table.up.sql  20230901132527_add_favourite_programming_language.down.sql  20230901132527_add_favourite_programming_language.up.sql
course/part11/sqlx_stuff/src/: main.rs
course/part12/service_stuff/: Cargo.toml
course/part12/service_stuff/src/: main.rs
course/part13/phantomdata_stuff/: Cargo.toml
course/part13/phantomdata_stuff/src/: main.rs
src/: main.rs
