[package]
name = "async5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "async5"
path = "src/async5.rs"

[dependencies]
anyhow = "1.0.71"
bson = "2.6.1"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
toml = "0.7.3"
url = { version = "2.3.1", features = ["serde"] }
