[package]
name = "async7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "async7"
path = "src/async7.rs"

[dependencies]
anyhow = "1.0.71"
tokio = { version = "1.28.1", features = ["full"] }
tokio-util = "0.7.8"
waitgroup = "0.1.2"
