[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
futures-util = "0.3.28"
prost = "0.11.9"
tokio = { version = "1.28.2", features = ["full"] }
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
