[package]
name = "tracing_showcase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
axum = "0.6.18"
futures = "0.3.28"
fxhash = "0.2.1"
http = "0.2.9"
mongodb = { version = "2.5.0", features = ["tracing"] }
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.18.0", features = ["rt-tokio"] }
pin-project = "1.1.0"
prost = "0.11.9"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
reqwest-middleware = "0.2.2"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
strum = "0.24.1"
strum_macros = "0.24.3"
task-local-extensions = "0.1.4"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tonic = "0.9.2"
tower = "0.4.13"
tracing = "0.1.37"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = { version = "2.4.0", features = ["serde"] }

[build-dependencies]
tonic-build = "0.9.2"
