[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
config = "0.13.3"
futures = "0.3.28"
mockall = "0.11.4"
mongodb = "2.6.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
url = { version = "2.4.0", features = ["serde"] }

[dev-dependencies]
test-case = "3.1.0"
testing_cleanup = { path = "../testing_cleanup" }
tokio-test = "0.4.2"
uuid = "1.4.0"
wiremock = "0.5.19"
