[package]
name = "rabbit_stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-channel = "1.9.0"
async-trait = "0.1.71"
casey = "0.4.0"
futures = "0.3.28"
lapin = "2.3.1"
mongodb = "2.6.0"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = "0.7.8"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
