[package]
name = "axum_stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = "0.6.19"
flate2 = "1.0.26"
futures = "0.3.28"
http = "0.2.9"
hyper = { version = "0.14.27", features = ["full"] }
pin-project = "1.1.2"
reqwest = "0.11.18"
serde = { version = "1.0.177", features = ["derive"] }
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.3", features = ["compression-gzip", "catch-panic", "full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
