[package]
name = "axum_stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = "0.6.19"
axum-extra = { version = "0.7.5", features = ["typed-routing"] }
axum-macros = "0.3.8"
bytes = "1.4.0"
flate2 = "1.0.26"
futures = "0.3.28"
http = "0.2.9"
http-body = "0.4.5"
http-body-util = "0.1.0-rc.3"
hyper = { version = "0.14.27", features = ["full"] }
pin-project = "1.1.2"
reqwest = "0.11.18"
serde = { version = "1.0.177", features = ["derive"] }
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = "0.7.8"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.3", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
