[package]
name = "sqlx_stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
futures = "0.3.28"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres", "uuid"] }
tokio = { version = "1.32.0", features = ["full"] }

