[package]
name = "service_stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
pin-project = "1.1.3"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
